# Lex-Navigator-Main

./: README.md  vercel.json
legalidea-BE-main/legalidea-BE-main/: .gitignore  README.md  import_laws.py  pyproject.toml  requirements.txt  vercel.json
legalidea-BE-main/legalidea-BE-main/Cases/: 133960.doc  133961.doc  133962.doc  133963.doc  133964.doc  133965.doc  133966.doc  133967.doc  133968.doc  133969.doc  133970.doc  133971.doc  133972.doc  133973.doc  133974.doc  133975.doc  133976.doc  133977.doc  133978.doc  133979.doc  133980.doc  133981.doc  133982.doc  133983.doc  133984.doc  133985.doc  133986.doc  133987.doc  133988.doc  133989.doc  133990.doc  133991.doc  133992.doc  133993.doc  133994.doc  133995.doc  133996.doc  133997.doc  133998.doc  133999.doc  (+16 more)
legalidea-BE-main/legalidea-BE-main/app/: __init__.py  events.py  main.py  version.py
legalidea-BE-main/legalidea-BE-main/app/api/: __init__.py  router.py
legalidea-BE-main/legalidea-BE-main/app/core/: __init__.py  config.py  logging.py  security.py
legalidea-BE-main/legalidea-BE-main/app/db/: __init__.py  session.py
legalidea-BE-main/legalidea-BE-main/app/repositories/: __init__.py  in_memory_user_repository.py
legalidea-BE-main/legalidea-BE-main/app/schemas/: __init__.py  auth.py  chat.py  law.py  user.py
legalidea-BE-main/legalidea-BE-main/app/services/: __init__.py  (+5 more)
legalidea-BE-main/legalidea-BE-main/legalidea_be.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
legalidea-BE-main/legalidea-BE-main/migrations/: env.py
legalidea-BE-main/legalidea-BE-main/tests/: conftest.py  test_config.py
(+60 files in other folders)
