[project]
name = "legalidea-be"
version = "0.1.0"
description = "Backend FastAPI service for the LegalIdea platform"
authors = [{ name = "LegalIdea Team", email = "dev@legalidea.local" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.1",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "bcrypt<4.1",
  "redis>=5.0",
  "httpx>=0.27",
  "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "pytest-asyncio>=0.23",
  "anyio>=4.3",
  "ruff>=0.3",
  "aiosqlite>=0.19"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC"]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
